--- a/assignment/de01/src/layouts/navbar.html
+++ b/assignment/de01/src/layouts/navbar.html
@@ -1,7 +1,8 @@
 <nav id="main-navbar">
-  <ul>
+  <ul class="menu">
     <li><a href="#!/">Trang chủ</a></li>
     <li><a href="#!/gioi-thieu">Giới thiệu</a></li>
     <li><a href="#!/lien-he">Liên hệ</a></li>
   </ul>
 </nav>
+<div class="clear-fix"></div>
